--- a/pages/politicas.html
+++ b/pages/politicas.html
@@ -1,61 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paez Moray</title>
-    <link rel="stylesheet" href="../css/estilo.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Paez Moray</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
-    <header>
-        <h1 class="marca">Mi LuTi</h1>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html">Inicio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
-                  <a class="nav-link active" href="preguntas.html">Preguntas Frecuentes</a>
-                  <a class="nav-link active" href="politicas.html">Política de Devolución y Cambios</a>
-                  <a class="nav-link active" href="contacto.html">Contacto</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main>
-        <h2> Información importante sobre nuestras políticas de Devolución y Cambios.</h2>
-        <div>Si no estas conforme con nuestro producto podes realizar cambios de la siguientes formas:</div>
-        
-        <li class="politicas">Podes hacer el cambio presencial en nuestro local AVISANDO previamente por mensaje que vas a realizar el cambio una vez que te confirmamos que esta listo podes venirte en el horario pactado</li> 
+  <header>
+    <h1 class="marca">Mi LuTi</h1>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Inicio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+            <a class="nav-link active" href="preguntas.html">Preguntas Frecuentes</a>
+            <a class="nav-link active" href="politicas.html">Política de Devolución y Cambios</a>
+            <a class="nav-link active" href="contacto.html">Contacto</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <h2> Información importante sobre nuestras políticas de Devolución y Cambios.</h2>
+    <div>Si no estas conforme con nuestro producto podes realizar cambios de la siguientes formas:</div>
 
-        <li class="politicas">En el caso del interior del pais el cliente debera ABONAR nuevamente ambos envios el del envio del producto al local y el de envio a su domicilio</li>
-        <br> </br>
-        <div>Las devoluciones solo pueden ser realizadas durante 10 dias siguientes a la compra.</div>
-        <br> 
-        <div>Si la prenda llego fallada y queres cambiarla podes hacerlo en el local o con envio a domicilio.</div>
-        <br> 
-        <div>Si la compra fue realizada en el local (es decir que no fue por envio) debera cambiarse del mismo modo sino deberan abonarse ambos envios.</div>
-        <br> 
-        <div>Si tu prenda llego con error o falla y preferis solucionarlo por tus propios medios te ofrecemos un beneficio para tu proxima compra.</div>
-        <br> 
-        <div>No cambiamos las bombachas por cuestion de higiene.</div>
-        <br> 
-        <div>NO REALIZAMOS DEVOLUCIONES DE DINERO.</div>
-        
-    </main>
-    <footer>
-        <h3>Todos los derechos reservados</h3>
-        <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
-        <a href="">Facebook</a>
-        <a href="">Instagram</a>
-    </footer>
+    <li class="politicas">Podes hacer el cambio presencial en nuestro local AVISANDO previamente por mensaje que vas a
+      realizar el cambio una vez que te confirmamos que esta listo podes venirte en el horario pactado</li>
+
+    <li class="politicas">En el caso del interior del pais el cliente debera ABONAR nuevamente ambos envios el del envio
+      del producto al local y el de envio a su domicilio</li>
+    <br> </br>
+    <div>Las devoluciones solo pueden ser realizadas durante 10 dias siguientes a la compra.</div>
+    <br>
+    <div>Si la prenda llego fallada y queres cambiarla podes hacerlo en el local o con envio a domicilio.</div>
+    <br>
+    <div>Si la compra fue realizada en el local (es decir que no fue por envio) debera cambiarse del mismo modo sino
+      deberan abonarse ambos envios.</div>
+    <br>
+    <div>Si tu prenda llego con error o falla y preferis solucionarlo por tus propios medios te ofrecemos un beneficio
+      para tu proxima compra.</div>
+    <br>
+    <div>No cambiamos las bombachas por cuestion de higiene.</div>
+    <br>
+    <div>NO REALIZAMOS DEVOLUCIONES DE DINERO.</div>
+
+  </main>
+  <footer>
+    <h3>Todos los derechos reservados</h3>
+    <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
+    <a href="">Facebook</a>
+    <a href="">Instagram</a>
+  </footer>
 
 
-
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
