Responsive a todas las paginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,6 +12,7 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <h1 class="marca">Mi LuTi</h1>
@@ -36,15 +37,15 @@
         <h2>Si tenés dudas o querés hacernos una consulta, no dudes en contactarnos.</h2>
         <form data-aos="zoom-in-right">
             <label for="">Nombre</label>
-            <input type="text">
+              <input type="text">
             <br></br>
             <label for="">Apellido</label>
-            <input type="text">
+              <input type="text">
             <br></br>
             <label for="">E-Mail</label>
-            <input type="email">
+              <input type="email">
             <br></br>
-            <textarea name="" id="" cols="35" rows="10">Deje su mensaje</textarea>
+            <textarea name="Deje Su Mensaje" id="" cols="35" rows="10">Deje su mensaje</textarea>
             <br></br>
             <input type="submit">            
         </form>
