--- a/pages/politicas.html
+++ b/pages/politicas.html
@@ -37,27 +37,18 @@
   </header>
   <main>
     <h2> Información importante sobre nuestras políticas de Devolución y Cambios.</h2>
-    <div>Si no estas conforme con nuestro producto podes realizar cambios de la siguientes formas:</div>
+    <h3>Si no estas conforme con nuestro producto podes realizar cambios de la siguientes formas:</h3>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Podes hacer el cambio presencial en nuestro local, con previo aviso por mensaje para poder brindarte un mejor servicio.</li>
+      <li class="list-group-item">En el caso del interior del pais el cliente debera abonar nuevamente el cargo por envio a domicilio</li>
+      <li class="list-group-item">Las devoluciones solo pueden ser realizadas durante 10 dias siguientes de recibido el producto.</li>
+      <li class="list-group-item">Si la prenda llego fallada y queres cambiarla podes hacerlo en el local o con envio a domicilio.</li>
+      <li class="list-group-item">Si la compra fue realizada en el local, debera cambiarse del mismo modo o debera abonarse el costo del envio en caso de ser necesario.</li>
+      <li class="list-group-item">Si tu prenda llego con error o falla y preferis solucionarlo por tus propios medios te ofrecemos un beneficio para tu proxima compra.</li>
+      <li class="list-group-item">La ropa interior no tiene cambio.</li>
+      <li class="list-group-item">NO REALIZAMOS DEVOLUCIONES DE DINERO.</li>
+    </ul>
 
-    <li class="politicas">Podes hacer el cambio presencial en nuestro local AVISANDO previamente por mensaje que vas a
-      realizar el cambio una vez que te confirmamos que esta listo podes venirte en el horario pactado</li>
-
-    <li class="politicas">En el caso del interior del pais el cliente debera ABONAR nuevamente ambos envios el del envio
-      del producto al local y el de envio a su domicilio</li>
-    <br> </br>
-    <div>Las devoluciones solo pueden ser realizadas durante 10 dias siguientes a la compra.</div>
-    <br>
-    <div>Si la prenda llego fallada y queres cambiarla podes hacerlo en el local o con envio a domicilio.</div>
-    <br>
-    <div>Si la compra fue realizada en el local (es decir que no fue por envio) debera cambiarse del mismo modo sino
-      deberan abonarse ambos envios.</div>
-    <br>
-    <div>Si tu prenda llego con error o falla y preferis solucionarlo por tus propios medios te ofrecemos un beneficio
-      para tu proxima compra.</div>
-    <br>
-    <div>No cambiamos las bombachas por cuestion de higiene.</div>
-    <br>
-    <div>NO REALIZAMOS DEVOLUCIONES DE DINERO.</div>
 
   </main>
   <footer>
