--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -1,72 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paez Moray</title>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
     <header>
         <h1 class="marca">Mi LuTi</h1>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html">Inicio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
-                  <a class="nav-link active" href="preguntas.html">Preguntas Frecuentes</a>
-                  <a class="nav-link active" href="politicas.html">Política de Devolución y Cambios</a>
-                  <a class="nav-link active" href="contacto.html">Contacto</a>
+                <a class="navbar-brand" href="../index.html">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                        <a class="nav-link active" href="preguntas.html">Preguntas Frecuentes</a>
+                        <a class="nav-link active" href="politicas.html">Política de Devolución y Cambios</a>
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <main>
         <div>
-            <h2>¿Tenes dudas? Por aca te ayudamos.</h2>
+            <h2>¿Tenes dudas? Por acá te ayudamos.</h2>
         </div>
 
-        <ul>
-            <li>
-                <nav>¿Qué formas de pago puedo aprovechar para realizar mi compra? </nav>
-                <nav>Trabajamos con mercadopago, transferencia y efectivo en el local.</nav>
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">¿Qué formas de pago puedo aprovechar para realizar mi compra?</div>
+                Trabajamos con mercadopago, transferencia y efectivo en el local.
+              </div>
+              <span class="badge bg-primary rounded-pill"></span>
             </li>
-            <br>
-            <li>
-                <nav>¿Cuál es el costo de envío?</nav>
-                <nav>El costo de envío será mostrado en base al total de la compra y ubicación, en el checkout, en el momento previo a la compra.</nav>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">¿Cuál es el costo de envío?</div>
+                El costo de envío será mostrado en base al total de la compra y ubicación, en el checkout de la compra. Realizamos envíos a todo el país.
+              </div>
+              <span class="badge bg-primary rounded-pill"></span>
             </li>
-            <br>
-            <li>
-                <nav>¿Cuál es el plazo para realizar un cambio?</nav>
-                <nav>Puedes solicitar un cambio hasta 10 días luego de realizada la compra.</nav>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">¿Cuánto tarda en llegar el pedido?</div>
+                El tiempo de entrega dependerá del tipo de envío seleccionado. En general tarda entre 5 y 10 días hábiles luego de acreditado el pago.
+              </div>
+              <span class="badge bg-primary rounded-pill"></span>
             </li>
-            <br>
-            <li>
-                <nav>¿Dónde puedo recibir mi pedido?</nav>
-                <nav>Realizamos envíos a todo el país.</nav>
-            </li>
-            <br>
-            <li>
-                <nav>¿Cuánto tarda en llegar el pedido?</nav>
-                <nav>El tiempo de entrega dependerá del tipo de envío seleccionado. En general la demora se encuentra entre 5 y 10 días hábiles luego de acreditado el pago.</nav>
-            </li>
-            <br>
-            <li>
-                <nav>¿Qué debo hacer si el producto no llega en buen estado?</nav>
-                <nav>Ponete en contacto con nosotros y te enviaremos uno nuevo.</nav>
-            </li>
-        </ul>
-      
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">¿Qué debo hacer si el producto no llega en buen estado?</div>
+                  Ponete en contacto con nosotros y te enviaremos uno nuevo.
+                </div>
+                <span class="badge bg-primary rounded-pill"></span>
+              </li>
+          </ol>
+
+
     </main>
     <footer>
         <h3>Todos los derechos reservados</h3>
@@ -76,7 +81,10 @@
     </footer>
 
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
