--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,69 +1,76 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paez Moray</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- CSS -->
-    <link rel="stylesheet" href="../css/estilo.css">
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Paez Moray</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/estilo.css">
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <h1 class="marca">Mi LuTi</h1>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html">Inicio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
-                  <a class="nav-link active" href="preguntas.html">Preguntas Frecuentes</a>
-                  <a class="nav-link active" href="politicas.html">Política de Devolución y Cambios</a>
-                  <a class="nav-link active" href="contacto.html">Contacto</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main>
-        <h2>Si tenés dudas o querés hacernos una consulta, no dudes en contactarnos.</h2>
-        <form data-aos="zoom-in-right">
-            <label for="">Nombre</label>
-              <input type="text">
-            <br></br>
-            <label for="">Apellido</label>
-              <input type="text">
-            <br></br>
-            <label for="">E-Mail</label>
-              <input type="email">
-            <br></br>
-            <textarea name="Deje Su Mensaje" id="" cols="35" rows="10">Deje su mensaje</textarea>
-            <br></br>
-            <input type="submit">            
-        </form>
+  <header>
+    <h1 class="marca">Mi LuTi</h1>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Inicio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+            <a class="nav-link active" href="preguntas.html">Preguntas Frecuentes</a>
+            <a class="nav-link active" href="politicas.html">Política de Devolución y Cambios</a>
+            <a class="nav-link active" href="contacto.html">Contacto</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <h2>Si tenés dudas o querés hacernos una consulta, no dudes en contactarnos.</h2>
+    <form data-aos="zoom-in-right">
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Nombre y Apellido</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Dirección de Email</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Deje su mensaje</label>
+        <textarea class="form-control" id="exampleFormControlTextarea2" rows="5"></textarea>
+      </div>
+      <input type="submit">
+    </form>
 
-    </main>
-    <footer>
-        <h3>Todos los derechos reservados</h3>
-        <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
-        <a href="">Facebook</a>
-        <a href="">Instagram</a>
-    </footer>
+  </main>
+  <footer>
+    <h3>Todos los derechos reservados</h3>
+    <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
+    <a href="">Facebook</a>
+    <a href="">Instagram</a>
+  </footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
