Sacamos loren y pusimos texto al inicio

--- a/index.html
+++ b/index.html
@@ -42,21 +42,22 @@
   </header>
   <main>
     <h2>¿Quienes Somos?</h2>
-    <p class="parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, voluptates iste delectus minus
-      alias, autem libero asperiores doloremque eum dicta facere ullam repudiandae. Doloremque neque cum dignissimos
-      provident velit commodi voluptas esse autem, dolorum aut ea modi eius vel facere. Ad aspernatur amet dolorem
-      debitis similique libero consectetur ut facere quod, deserunt necessitatibus eveniet voluptate consequatur
-      repellat, at earum. Itaque iusto suscipit doloremque, optio maxime dicta voluptatum inventore aliquam consequatur
-      reprehenderit, porro aspernatur sint mollitia distinctio nostrum eligendi? Aliquam illo quaerat quo reprehenderit
-      neque? Repudiandae hic sequi molestias quia nam corrupti obcaecati, maiores aperiam illum perspiciatis, voluptate,
-      deserunt delectus voluptatem.</p>
+    <p class="parrafo">Somos un emprendimiento familiar con la misión de llevar los mejores productos a precios accesibles a todo el país. Nos motiva poder brindar un buen servicio y que los productos sean inclusivos para todos los gustos y talles.
+      <br>
+      Confeccionamos nuestros productos en nuestro taller, para llevarles originalidad en los diseños y en los talles.
+      <br>
+      Tambien vendemos productos provenientes de otros talleres asociados, siempre cuidando la calidad de la materia prima para poder brindarles prendas de calidad y confort.
+    </p>
 
     <img data-aos="flip-right" class="nosotros col-xl-3 col-md-6 col-sm-12" src="img/holaHola.jpg"
       alt="Nosotros - Nice To Meet You">
 
-    <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam dolorem cupiditate ipsa?
-      Assumenda, blanditiis maxime eaque repellat aut mollitia et atque veritatis omnis, voluptate, explicabo
-      praesentium nulla? Ratione, harum minus?</p>
+    <p class="parrafo">Desde nuestro taller y local ubicado en Lanús, provincia de Buenos Aires, realizamos envíos a
+      todo el país.
+      Seguinos en nuestras redes para estar informado de todas las promociones, para hacer tus pedidos personalizados y comunicarte con nosotros por cualquier duda que tengas. 
+      <br>
+      Estamos a tu disposición para que la experiencia de compra
+      sea única.</p>
 
   </main>
   <footer>
