--- a/pages/productos.html
+++ b/pages/productos.html
@@ -64,29 +64,29 @@
 
         <div class="row">
             <section class="imgProducto1 col-xl-3 col-md-6 col-sm-12">
-                <h4>Producto1</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, illo?</p>
+                <h4>Conjunto primavera</h4>
+                <p>Pantalon color blanco Denim, top varios colores</p>
                 <img data-aos="flip-right" src="../img/ropa1.jpg" alt="Jean Blanco">
                 <button class="button">Comprar</button>
             </section>
 
             <section class="imgProducto2 col-xl-3 col-md-6 col-sm-12">
-                <h4>Producto2</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, illo?</p>
+                <h4>Conjunto romance</h4>
+                <p>Buzo con capucha, blusita y short</p>
                 <img data-aos="flip-right" src="../img/ropa2.jpg" alt="Conjunto">
                 <button class="button">Comprar</button>
             </section>
 
             <section class="imgProducto3 col-xl-3 col-md-6 col-sm-12">
-                <h4>Producto3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, illo?</p>
+                <h4>Vestido</h4>
+                <p>Vestido largo con lunares</p>
                 <img data-aos="flip-right" src="../img/ropa3.jpg" alt="Vestido">
                 <button class="button">Comprar</button>
             </section>
 
             <section class="imgProducto4 col-xl-3 col-md-6 col-sm-12">
-                <h4>Producto4</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, illo?</p>
+                <h4>Pollera diseño</h4>
+                <p>Pollera larga de modal</p>
                 <img data-aos="flip-right" src="../img/ropa4.jpg" alt="Pollera">
                 <button class="button">Comprar</button>
             </section>
