--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paez Moray</title>
+  <meta name="keywords" content="tienda, ropa, mujeres, buenos aires">
+  <meta name="description" content="Tienda de ropa de mujer, al mejor estilo actual y las últimas tendencias">
+  <title>Paez Moray/Tienda Inicio</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -42,11 +44,14 @@
   </header>
   <main>
     <h2>¿Quienes Somos?</h2>
-    <p class="parrafo">Somos un emprendimiento familiar con la misión de llevar los mejores productos a precios accesibles a todo el país. Nos motiva poder brindar un buen servicio y que los productos sean inclusivos para todos los gustos y talles.
+    <p class="parrafo">Somos un emprendimiento familiar con la misión de llevar los mejores productos a precios
+      accesibles a todo el país. Nos motiva poder brindar un buen servicio y que los productos sean inclusivos para
+      todos los gustos y talles.
       <br>
       Confeccionamos nuestros productos en nuestro taller, para llevarles originalidad en los diseños y en los talles.
       <br>
-      Tambien vendemos productos provenientes de otros talleres asociados, siempre cuidando la calidad de la materia prima para poder brindarles prendas de calidad y confort.
+      Tambien vendemos productos provenientes de otros talleres asociados, siempre cuidando la calidad de la materia
+      prima para poder brindarles prendas de calidad y confort.
     </p>
 
     <img data-aos="flip-right" class="nosotros col-xl-3 col-md-6 col-sm-12" src="img/holaHola.jpg"
@@ -54,10 +59,12 @@
 
     <p class="parrafo">Desde nuestro taller y local ubicado en Lanús, provincia de Buenos Aires, realizamos envíos a
       todo el país.
-      Seguinos en nuestras redes para estar informado de todas las promociones, para hacer tus pedidos personalizados y comunicarte con nosotros por cualquier duda que tengas. 
+      Seguinos en nuestras redes para estar informado de todas las promociones, para hacer tus pedidos personalizados y
+      comunicarte con nosotros por cualquier duda que tengas.
       <br>
       Estamos a tu disposición para que la experiencia de compra
-      sea única.</p>
+      sea única.
+    </p>
 
   </main>
   <footer>
