--- a/pages/politicas.html
+++ b/pages/politicas.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paez Moray</title>
+  <meta name="keywords" content="tienda, ropa, mujeres, buenos aires">
+  <meta name="description" content="Politicas de cambios y devolucion que aplicamos en nuestra tienda">
+  <title>Paez Moray/Politicas</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -39,12 +41,18 @@
     <h2> Información importante sobre nuestras políticas de Devolución y Cambios.</h2>
     <h3>Si no estas conforme con nuestro producto podes realizar cambios de la siguientes formas:</h3>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">Podes hacer el cambio presencial en nuestro local, con previo aviso por mensaje para poder brindarte un mejor servicio.</li>
-      <li class="list-group-item">En el caso del interior del pais el cliente debera abonar nuevamente el cargo por envio a domicilio</li>
-      <li class="list-group-item">Las devoluciones solo pueden ser realizadas durante 10 dias siguientes de recibido el producto.</li>
-      <li class="list-group-item">Si la prenda llego fallada y queres cambiarla podes hacerlo en el local o con envio a domicilio.</li>
-      <li class="list-group-item">Si la compra fue realizada en el local, debera cambiarse del mismo modo o debera abonarse el costo del envio en caso de ser necesario.</li>
-      <li class="list-group-item">Si tu prenda llego con error o falla y preferis solucionarlo por tus propios medios te ofrecemos un beneficio para tu proxima compra.</li>
+      <li class="list-group-item">Podes hacer el cambio presencial en nuestro local, con previo aviso por mensaje para
+        poder brindarte un mejor servicio.</li>
+      <li class="list-group-item">En el caso del interior del pais el cliente debera abonar nuevamente el cargo por
+        envio a domicilio</li>
+      <li class="list-group-item">Las devoluciones solo pueden ser realizadas durante 10 dias siguientes de recibido el
+        producto.</li>
+      <li class="list-group-item">Si la prenda llego fallada y queres cambiarla podes hacerlo en el local o con envio a
+        domicilio.</li>
+      <li class="list-group-item">Si la compra fue realizada en el local, debera cambiarse del mismo modo o debera
+        abonarse el costo del envio en caso de ser necesario.</li>
+      <li class="list-group-item">Si tu prenda llego con error o falla y preferis solucionarlo por tus propios medios te
+        ofrecemos un beneficio para tu proxima compra.</li>
       <li class="list-group-item">La ropa interior no tiene cambio.</li>
       <li class="list-group-item">NO REALIZAMOS DEVOLUCIONES DE DINERO.</li>
     </ul>
