--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paez Moray</title>
+    <meta name="keywords" content="tienda, ropa, mujeres, buenos aires">
+    <meta name="description" content="Preguntas frecuentes de nuestras clientas">
+    <title>Paez Moray/Preguntas</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -42,34 +44,36 @@
 
         <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
-              <div class="ms-2 me-auto">
-                <div class="fw-bold">¿Qué formas de pago puedo aprovechar para realizar mi compra?</div>
-                Trabajamos con mercadopago, transferencia y efectivo en el local.
-              </div>
-              <span class="badge bg-primary rounded-pill"></span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-              <div class="ms-2 me-auto">
-                <div class="fw-bold">¿Cuál es el costo de envío?</div>
-                El costo de envío será mostrado en base al total de la compra y ubicación, en el checkout de la compra. Realizamos envíos a todo el país.
-              </div>
-              <span class="badge bg-primary rounded-pill"></span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-              <div class="ms-2 me-auto">
-                <div class="fw-bold">¿Cuánto tarda en llegar el pedido?</div>
-                El tiempo de entrega dependerá del tipo de envío seleccionado. En general tarda entre 5 y 10 días hábiles luego de acreditado el pago.
-              </div>
-              <span class="badge bg-primary rounded-pill"></span>
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">¿Qué formas de pago puedo aprovechar para realizar mi compra?</div>
+                    Trabajamos con mercadopago, transferencia y efectivo en el local.
+                </div>
+                <span class="badge bg-primary rounded-pill"></span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
-                  <div class="fw-bold">¿Qué debo hacer si el producto no llega en buen estado?</div>
-                  Ponete en contacto con nosotros y te enviaremos uno nuevo.
+                    <div class="fw-bold">¿Cuál es el costo de envío?</div>
+                    El costo de envío será mostrado en base al total de la compra y ubicación, en el checkout de la
+                    compra. Realizamos envíos a todo el país.
                 </div>
                 <span class="badge bg-primary rounded-pill"></span>
-              </li>
-          </ol>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">¿Cuánto tarda en llegar el pedido?</div>
+                    El tiempo de entrega dependerá del tipo de envío seleccionado. En general tarda entre 5 y 10 días
+                    hábiles luego de acreditado el pago.
+                </div>
+                <span class="badge bg-primary rounded-pill"></span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">¿Qué debo hacer si el producto no llega en buen estado?</div>
+                    Ponete en contacto con nosotros y te enviaremos uno nuevo.
+                </div>
+                <span class="badge bg-primary rounded-pill"></span>
+            </li>
+        </ol>
 
 
     </main>
