--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <header>
-    <h1 class="marca text-center">Mi LuTi</h1>
+    <h1 class="marca text-center" href="index.html">Mi LuTi</h1>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Inicio</a>
