--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <h1 class="marca">Mi LuTi</h1>
+    <h1 class="marca" href="../index.html">Mi LuTi</h1>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">Inicio</a>
@@ -50,7 +50,7 @@
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Deje su mensaje</label>
+        <label for="exampleFormControlTextarea2" class="form-label">Deje su mensaje</label>
         <textarea class="form-control" id="exampleFormControlTextarea2" rows="5"></textarea>
       </div>
       <input type="submit">
