--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1 class="marca">Mi LuTi</h1>
+        <h1 class="marca" href="../index.html">Mi LuTi</h1>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Inicio</a>
