--- a/pages/productos.html
+++ b/pages/productos.html
@@ -23,7 +23,7 @@
 
 <body class="gridPadre">
     <header>
-        <h1 class="marca">Mi LuTi</h1>
+        <h1 class="marca" href="../index.html">Mi LuTi</h1>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Inicio</a>
@@ -95,22 +95,25 @@
             </section>
         </div>
 
-        <footer>
-            <h3>Todos los derechos reservados</h3>
-            <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
-            <a href="">Facebook</a>
-            <a href="">Instagram</a>
-        </footer>
+    </main>
 
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
+    <footer>
+        <h3>Todos los derechos reservados</h3>
+        <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
+        <a href="">Facebook</a>
+        <a href="">Instagram</a>
+    </footer>
 
-        <!-- JavaScript Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
