arreglos en el estilo

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         </div>
       </div>
     </nav>
-
   </header>
+
+
   <main>
     <h2>¿Quienes Somos?</h2>
     <p class="parrafo">Somos un emprendimiento familiar con la misión de llevar los mejores productos a precios
@@ -54,7 +55,7 @@
       prima para poder brindarles prendas de calidad y confort.
     </p>
 
-    <img data-aos="flip-right" class="nosotros col-xl-3 col-md-6 col-sm-12" src="img/holaHola.jpg"
+    <img data-aos="flip-right" class="nosotros" src="img/holaHola.jpg"
       alt="Nosotros - Nice To Meet You">
 
     <p class="parrafo">Desde nuestro taller y local ubicado en Lanús, provincia de Buenos Aires, realizamos envíos a
@@ -65,8 +66,8 @@
       Estamos a tu disposición para que la experiencia de compra
       sea única.
     </p>
-
   </main>
+
   <footer>
     <h3>Todos los derechos reservados</h3>
     <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
