--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -37,46 +37,50 @@
             </div>
         </nav>
     </header>
+
     <main>
         <div>
             <h2>¿Tenes dudas? Por acá te ayudamos.</h2>
         </div>
 
-        <ol class="list-group list-group-numbered">
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">¿Qué formas de pago puedo aprovechar para realizar mi compra?</div>
-                    Trabajamos con mercadopago, transferencia y efectivo en el local.
-                </div>
-                <span class="badge bg-primary rounded-pill"></span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">¿Cuál es el costo de envío?</div>
-                    El costo de envío será mostrado en base al total de la compra y ubicación, en el checkout de la
-                    compra. Realizamos envíos a todo el país.
-                </div>
-                <span class="badge bg-primary rounded-pill"></span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">¿Cuánto tarda en llegar el pedido?</div>
-                    El tiempo de entrega dependerá del tipo de envío seleccionado. En general tarda entre 5 y 10 días
-                    hábiles luego de acreditado el pago.
-                </div>
-                <span class="badge bg-primary rounded-pill"></span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">¿Qué debo hacer si el producto no llega en buen estado?</div>
-                    Ponete en contacto con nosotros y te enviaremos uno nuevo.
-                </div>
-                <span class="badge bg-primary rounded-pill"></span>
-            </li>
-        </ol>
-
+        <div class="preguntas">
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">¿Qué formas de pago puedo aprovechar para realizar mi compra?</div>
+                        Trabajamos con mercadopago, transferencia y efectivo en el local.
+                    </div>
+                    <span class="badge bg-primary rounded-pill"></span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">¿Cuál es el costo de envío?</div>
+                        El costo de envío será mostrado en base al total de la compra y ubicación, en el checkout de la
+                        compra. Realizamos envíos a todo el país.
+                    </div>
+                    <span class="badge bg-primary rounded-pill"></span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">¿Cuánto tarda en llegar el pedido?</div>
+                        El tiempo de entrega dependerá del tipo de envío seleccionado. En general tarda entre 5 y 10
+                        días
+                        hábiles luego de acreditado el pago.
+                    </div>
+                    <span class="badge bg-primary rounded-pill"></span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">¿Qué debo hacer si el producto no llega en buen estado?</div>
+                        Ponete en contacto con nosotros y te enviaremos uno nuevo.
+                    </div>
+                    <span class="badge bg-primary rounded-pill"></span>
+                </li>
+            </ol>
+        </div>
 
     </main>
+
     <footer>
         <h3>Todos los derechos reservados</h3>
         <h3>Sitio creado por Miguela Viviana Paez Moray</h3>
